Bug 328371 - "FFT Length" is editable when "Interleaved Average" is deselected
Summary: "FFT Length" is editable when "Interleaved Average" is deselected
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.8
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-03 11:13 UTC by Ben Lewis
Modified: 2014-06-02 22:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Lewis 2013-12-03 11:13:31 UTC
When editing a Power Spectrum the FFT length option should be grayed out when the "Interleaved Average" option is not selected.

Reproducible: Always

Steps to Reproduce:
1. Use the Data Wizard to import a single vector of time series data and create a Power Spectrum. 
2. Under FFT options deselect "Interleaved Average". This will gray out the box for entering FFT length.
3. Complete the remainder Data Wizard so that a Power Spectrum plot is displayed
3. Edit the newly created curve (Data Manager > Right click Power Spectrum > Edit
4. The FFT length is now editable with no effect
Actual Results:  
When editing a Power Spectrum the FFT length option is editable when the "Interleaved Average" option is not selected.

Expected Results:  
When editing a Power Spectrum the FFT length option should be grayed out when the "Interleaved Average" option is not selected.
Comment 1 Netterfield 2014-06-02 22:32:43 UTC
Git commit 6fe81be6cea520b67a9d416a45d168a38281eb3b by Barth Netterfield.
Committed on 02/06/2014 at 22:31.
Pushed by netterfield into branch 'master'.

Fix enabling/disabling widgets in FFT options.

M  +4    -0    src/widgets/fftoptions.cpp

http://commits.kde.org/kst-plot/6fe81be6cea520b67a9d416a45d168a38281eb3b