Fix enabling/disabling widgets in FFT options.

BUG: 328371